--- a/signup-form.html
+++ b/signup-form.html
@@ -17,6 +17,7 @@
         </div>
         <div class="right-side">
             <form>
+                <fieldset>
 <label for="first_name"> First Name</label>
 <input type="text" id="first_name" placeholder="Anna.."> 
 <label for="last_name"> Last Name</label>
@@ -25,6 +26,7 @@
 <input type="email" id="user_email" name="email" placeholder="youremail@yahoo.com">
 <label for="phone_number"> Phone Number</label>
 <input type="tel" id="phone_number" name="phone number" placeholder="000-000-0000" pattern="\d{10}" required>>
+</fieldset>
 </form>
                </div>
     </div>
