Add fieldset styles, create buttons

--- a/signup-form.html
+++ b/signup-form.html
@@ -18,6 +18,7 @@
         <div class="right-side">
             <form>
                 <fieldset>
+                    <legend> Let's Go!</legend>
 <label for="first_name"> First Name</label>
 <input type="text" id="first_name" placeholder="Anna.."> 
 <label for="last_name"> Last Name</label>
@@ -25,9 +26,10 @@
 <label for="user_email"> Email Address </label>
 <input type="email" id="user_email" name="email" placeholder="youremail@yahoo.com">
 <label for="phone_number"> Phone Number</label>
-<input type="tel" id="phone_number" name="phone number" placeholder="000-000-0000" pattern="\d{10}" required>>
+<input type="tel" id="phone_number" name="phone number" placeholder="000-000-0000" pattern="\d{10}" required>
 </fieldset>
 </form>
+<button type="button"> Create Account</button> 
                </div>
     </div>
 </body>
