--- a/signup-form.html
+++ b/signup-form.html
@@ -19,14 +19,18 @@
             <form>
                 <fieldset>
                     <legend> Let's Go!</legend>
+                    <div class="name-container">
 <label for="first_name"> First Name</label>
 <input type="text" id="first_name" placeholder="Anna.."> 
 <label for="last_name"> Last Name</label>
-<input type="text" id="last_name" placeholder="Goetz..">              
+<input type="text" id="last_name" placeholder="Goetz..">   
+               </div>
+                <div class="contact-container">      
 <label for="user_email"> Email Address </label>
 <input type="email" id="user_email" name="email" placeholder="youremail@yahoo.com">
 <label for="phone_number"> Phone Number</label>
 <input type="tel" id="phone_number" name="phone number" placeholder="000-000-0000" pattern="\d{10}" required>
+</div>     
 </fieldset>
 </form>
 <button type="button"> Create Account</button> 
