--- a/signup-form.html
+++ b/signup-form.html
@@ -20,21 +20,29 @@
                 <fieldset>
                     <legend> Let's Go!</legend>
                     <div class="name-container">
-<label for="first_name"> First Name</label>
-<input type="text" id="first_name" placeholder="Anna.."> 
-<label for="last_name"> Last Name</label>
-<input type="text" id="last_name" placeholder="Goetz..">   
-               </div>
-                <div class="contact-container">      
-<label for="user_email"> Email Address </label>
-<input type="email" id="user_email" name="email" placeholder="youremail@yahoo.com">
-<label for="phone_number"> Phone Number</label>
-<input type="tel" id="phone_number" name="phone number" placeholder="000-000-0000" pattern="\d{10}" required>
-</div>     
-</fieldset>
-</form>
-<button type="button"> Create Account</button> 
-               </div>
+                        <div class="name-input">
+                            <label for="first_name">First Name</label>
+                            <input type="text" id="first_name" placeholder="Anna.." style="width: 150px;">
+                        </div>
+                        <div class="name-input">
+                            <label for="last_name">Last Name</label>
+                            <input type="text" id="last_name" placeholder="Goetz.." style="width: 150px;">
+                        </div>
+                    </div>
+                    <div class="contact-container">      
+                        <div class="contact-input">
+                            <label for="user_email">Email Address</label>
+                            <input type="email" id="user_email" name="email" placeholder="youremail@yahoo.com" style="width: 200px;">
+                        </div>
+                        <div class="contact-input">
+                            <label for="phone_number">Phone Number</label>
+                            <input type="tel" id="phone_number" name="phone_number" placeholder="000-000-0000" pattern="\d{10}" required style="width: 150px;">
+                        </div>
+                    </div>
+                </fieldset>
+            </form>
+            <button type="button"> Create Account</button> 
+        </div>
     </div>
 </body>
 </html>
