Make in-line style for legend font size

--- a/signup-form.html
+++ b/signup-form.html
@@ -18,7 +18,7 @@
         <div class="right-side">
             <form>
                 <fieldset>
-                    <legend> Let's Go!</legend>
+                    <legend style="font-size:30px;"> Let's Go!</legend>
                     <div class="name-container">
                         <div class="name-input">
                             <label for="first_name">First Name</label>
